fixed page too long problem

--- a/beta/styles/main.css
+++ b/beta/styles/main.css
@@ -3,7 +3,7 @@ body { margin: 0px; font-family: 'Maven Pro', sans-serif; z-index:1 }
 
 /* CSS realated to the main content wrapper of the page */
 #main_wrapper { background-color: rgb(228,219,181); padding-top: 10px; min-height: 492px; /*max-height:1500px;min-width: 1225px;*/ width:100%;display:table; padding-bottom:100%;padding-left:auto;padding-right:auto; }
-#main_wrapper_results { background-color: rgb(228,219,181); padding-top: 10px; min-height: 1400px; padding-bottom: 100px; /*overflow: hidden; height: 1400px;*/ }
+#main_wrapper_results { background-color: rgb(228,219,181); padding-top: 10px; min-height: 1400px; padding-bottom: 100px; overflow:hidden }
 #sub_main_wrapper_results { background-color: rgb(228,219,181); padding-top: 10px; }
 #content_wrapper {/* margin-left:190px;*/ margin-left: auto; margin-right:auto; width:800px; padding-left:50px; }
 #sub_content_wrapper { margin-left:0px;}
